crates/background/src/snapshots/background__cloistered_scholar__tests__ideals.snap
---
source: crates/background/src/cloistered_scholar.rs
expression: background.ideals()

---
- - Knowledge. The path to power and self-improvement is through knowledge.
  - Neutral
- - Beauty. What is beautiful points us beyond itself toward what is true.
  - Good
- - Logic. Emotions must not cloud our logical thinking.
  - Lawful
- - No Limits. Nothing should fetter the infinite possibility inherent in all existence.
  - Chaotic
- - Power. Knowledge is the path to power and domination.
  - Evil
- - Self-Improvement. The goal of a life of study is the betterment of oneself.
  - Any

