crates/background/src/snapshots/background__cloistered_scholar__tests__skills.snap
---
source: crates/background/src/cloistered_scholar.rs
expression: "CloisteredScholar::skills()"

---
- History
- Arcana
- Nature
- Religion

