crates/background/src/snapshots/background__cloistered_scholar__tests__snapshot_addl_proficiences.snap
---
source: crates/background/src/cloistered_scholar.rs
expression: background.addl_proficiencies()

---
- Skill:
    - - Arcana
      - Nature
      - Religion
    - 1

