crates/background/src/snapshots/background__cloistered_scholar__tests__snapshot_citations.snap
---
source: crates/background/src/cloistered_scholar.rs
expression: background.citations()

---
- - Scag
  - 146

