crates/background/src/snapshots/background__cloistered_scholar__tests__snapshot_coins.snap
---
source: crates/background/src/cloistered_scholar.rs
expression: background.coins()

---
- Gold
- 10

