crates/background/src/snapshots/background__cloistered_scholar__tests__snapshot_display.snap
---
source: crates/background/src/cloistered_scholar.rs
expression: background

---
Cloistered Scholar
