crates/background/src/snapshots/background__cloistered_scholar__tests__snapshot_equipment.snap
---
source: crates/background/src/cloistered_scholar.rs
expression: background.equipment()

---
- Other: "the scholar's robes of your cloister"
- Other: "a writing kit (small pouch with a quill, a bottle of ink, folded parchment, and a small penknife)"
- Other: a borrowed book on the subject of your current study
- Gear:
    Other: Pouch

