crates/background/src/snapshots/background__cloistered_scholar__tests__snapshot_features.snap
---
source: crates/background/src/cloistered_scholar.rs
expression: background.features()

---
- title: Library Access
  citation:
    - Scag
    - 146

