crates/background/src/snapshots/background__cloistered_scholar__tests__snapshot_languages.snap
---
source: crates/background/src/cloistered_scholar.rs
expression: background.addl_languages()

---
- 2
- ~

